k8s/adminer/adminer_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
  namespace: pfe
spec:
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: 8080
