k8s/adminer/adminer_ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  namespace: pfe
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - adminer.example.com
      secretName: adminer-tls-cert
  rules:
    - host: adminer.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
